# SinGE

./: .clang-format  .gitignore  .gitmodules  BUILD.gn  CMakeLists.txt  LICENSE  README.md  SinGE.sln
Modules/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
Modules/Core/include/Core/: config.h  env.h
Modules/Core/source/Interfaces/: IFromArchive.cpp  IFromString.cpp  IToArchive.cpp  IToString.cpp
Modules/Core/source/Math/: Angle.cpp  Mat4.cpp  Quat.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Modules/Core/source/Memory/: Functions.cpp
Modules/Core/source/Reflection/: EnumTypeInfo.cpp  InterfaceInfo.cpp  Reflection.cpp  TypeDB.cpp  TypeInfo.cpp
Modules/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Modules/Engine/include/Engine/: Component.h  EventChannel.h  Frame.h  Lightmap.h  Node.h  ProcessingFrame.h  Scene.h  SceneData.h  SceneMod.h  System.h  SystemFrame.h  SystemInfo.h  TagBuffer.h  TagCallback.h  TagCallbackInfo.h  UpdatePipeline.h  config.h
Modules/Engine/source/: Component.cpp  EventChannel.cpp  Frame.cpp  Lightmap.cpp  Node.cpp  ProcessingFrame.cpp  Scene.cpp  SystemFrame.cpp  TagBuffer.cpp
Modules/Engine/source/Components/: CTransform3D.cpp  StaticMesh.cpp  Transform2D.cpp  Transform3D.cpp
Modules/Engine/source/Engine/: UpdatePipeline.cpp
Modules/Engine/source/Interfaces/: ISystem.cpp
Modules/Engine/source/Resources/: Material.cpp  Shader.cpp  StaticMesh.cpp  Texture.cpp
Modules/Engine/source/Systems/: AnimationSystem.cpp  ChangeLevelSystem.cpp
Modules/Engine/source/Tags/: DebugDraw.cpp  FDebugDraw.cpp
Modules/Engine/source/Util/: VectorUtils.cpp
Modules/Lightmapper/: CMakeLists.txt  Lightmapper.vcxproj  Lightmapper.vcxproj.filters
Modules/Lightmapper/include/Lightmapper/: Lightmapper.h  build.h
Modules/Lightmapper/source/: Lightmapper.cpp
Modules/Resource/: CMakeLists.txt  Resource.vcxproj  Resource.vcxproj.filters
Modules/Resource/include/Resource/: Image.h  ResourceCallbackQueue.h  ResourceId.h  ResourceInfo.h  ResourceManager.h  ResourcePackage.h  build.h  config.h
Modules/Resource/private/: BinaryArchiveNode.h  BinaryArchiveReader.h  BinaryArchiveWriter.h  JsonArchiveReader.h  JsonArchiveWriter.h
Modules/Resource/source/: Image.cpp  ResourceManager.cpp
Modules/Resource/source/Archives/: BinaryArchive.cpp  JsonArchive.cpp
Modules/Resource/source/Interfaces/: IFromFile.cpp
Modules/Resource/source/Misc/: Color.cpp  ImageOps.cpp  LightmaskVolume.cpp
Modules/Resource/source/Resources/: HDRImage.cpp  Image.cpp  Material.cpp  Shader.cpp  StaticMesh.cpp  Texture.cpp
Runtimes/Client/: CMakeLists.txt  Client.vcxproj
Runtimes/Client/source/: main.cpp
Runtimes/GLClient/: CMakeLists.txt  GLClient.vcxproj
Runtimes/GLClient/source/: main.cpp
Runtimes/GLEditorServer/: CMakeLists.txt  GLEditorServer.vcxproj
Runtimes/GLEditorServer/source/: main.cpp
Systems/BulletPhysics/: BulletPhysics.vcxproj  BulletPhysics.vcxproj.filters  CMakeLists.txt
Systems/BulletPhysics/include/BulletPhysics/: BulletPhysicsSystem.h  Config.h  build.h
Systems/BulletPhysics/private/: BulletPhysicsSystemData.h  CharacterController.h  Collider.h  Colliders.h  DebugDrawer.h  LevelPortal.h  LightmaskVolumeCollider.h  PhysTransform.h  PhysicsEntity.h  PhysicsWorld.h  RigidBody.h  Util.h
Systems/BulletPhysics/source/: BulletPhysicsSystem.cpp  BulletPhysicsSystemData.cpp  CharacterController.cpp  Colliders.cpp  Config.cpp  DebugDrawer.cpp  LevelPortal.cpp  LightmaskVolumeCollider.cpp  PhysicsEntity.cpp  RigidBody.cpp
Systems/EditorServerSystem/: CMakeLists.txt  EditorServerSystem.vcxproj  EditorServerSystem.vcxproj.filters
Systems/EditorServerSystem/include/EditorServerSystem/: EditorServerSystem.h  config.h
Systems/EditorServerSystem/private/: EditorOps.h  EditorPacket.h  EditorServerSystemData.h  Packet.h  Session.h
Systems/EditorServerSystem/source/: EditorOps.cpp  EditorServerSystem.cpp  EditorServerSystemData.cpp  Session.cpp  asio.cpp
Systems/GLRender/: CMakeLists.txt  GLRender.vcxproj  GLRender.vcxproj.filters
Systems/GLRender/private/: DebugLine.h  GLMaterial.h  GLRenderSystemState.h  GLShader.h  GLStaticMesh.h  GLTexture2D.h  LightmaskVolume.h  RenderCommands.h  RenderQueue.h  RenderResource.h  RenderScene.h  Util.h  glew.h
Systems/GLRender/source/: Config.cpp  GLMaterial.cpp  GLRender.cpp  GLRenderSystem.cpp  GLRenderSystemState.cpp  GLShader.cpp  GLStaticMesh.cpp  GLTexture.cpp  GLTexture2D.cpp  LightmaskVolume.cpp  RenderCommands.cpp  RenderResource.cpp  RenderScene.cpp  Util.cpp
Systems/GLWindow/: CMakeLists.txt  GLWindow.vcxproj  GLWindow.vcxproj.filters
Systems/GLWindow/source/: GLEventWindow.cpp  InputBindings.cpp
lib/base/: BUCK  BUILD.gn  build.h  config.h  env.h
lib/base/containers/: fixed_string.h
lib/base/functional/: function_view.h  ufunction.h
lib/base/interfaces/: from_archive.cpp  from_archive.h  from_string.cpp  from_string.h  to_archive.cpp  to_archive.h  to_string.cpp  to_string.h
lib/base/io/: archive.h  archive_reader.h  archive_writer.h
lib/base/math/: Angle.cpp  Angle.h  Conversions.h  IVec2.h  IVec3.h  Mat4.cpp  Mat4.h  Matrix3.h  Quat.cpp  Quat.h  TVector3.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  angle.cpp  conversions.h  ivec2.h  matrix3.h  vec2.cpp  vec2.h  vec3.h  vec4.cpp
lib/base/memory/: Functions.cpp  Functions.h  functions.h
lib/base/reflection/: Any.h  ArgAny.h  ConstructorInfo.h  EnumTypeInfo.cpp  EnumTypeInfo.h  FieldInfo.h  FunctionInfo.h  InterfaceInfo.h  NativeConstructorInfo.h  NativePropertyInfo.h  NativeTypeInfo.h  PropertyInfo.h  Reflection.cpp  Reflection.h  ReflectionBuilder.h  TypeDB.cpp  TypeDB.h  TypeInfo.h  any.h  arg_any.h  constructor_info.h  enum_type_info.cpp  enum_type_info.h  field_info.h  function_info.h  interface_info.h  native_constructor_info.h  native_property_info.h  native_type_info.h  property_info.h  reflection.cpp  reflection_builder.h  type_db.cpp  type_db.h  type_info.h
lib/base/stde/: TMP.h  tmp.h  type_traits.h
lib/base/util/: InterfaceUtils.h  StringUtils.h  interface_utils.h  string_utils.h
(+416 files in other folders)
