static_library("base") {
  sources = [
    "config.h",
    "containers/fixed_string.h",
    "env.h",
    "functional/function_view.h",
    "functional/ufunction.h",
    "interfaces/from_archive.cpp",
    "interfaces/from_archive.h",
    "interfaces/from_string.cpp",
    "interfaces/from_string.h",
    "interfaces/from_string.h",
    "interfaces/to_archive.cpp",
    "interfaces/to_archive.h",
    "interfaces/to_string.cpp",
    "interfaces/to_string.h",
    "io/archive.h",
    "io/archive_reader.h",
    "io/archive_writer.h",
    "math/Angle.cpp",
    "math/Angle.h",
    "math/Conversions.h",
    "math/IVec2.h",
    "math/IVec3.h",
    "math/Mat4.cpp",
    "math/Mat4.h",
    "math/Matrix3.h",
    "math/Quat.cpp",
    "math/Quat.h",
    "math/TVector3.h",
    "math/Vec2.cpp",
    "math/Vec2.h",
    "math/Vec3.cpp",
    "math/Vec3.h",
    "math/Vec4.cpp",
    "math/Vec4.h",
    "memory/Buffers/MultiStackBuffer.cpp",
    "memory/Buffers/MultiStackBuffer.h",
    "memory/Functions.cpp",
    "memory/Functions.h",
    "reflection/Any.h",
    "reflection/ArgAny.h",
    "reflection/ConstructorInfo.h",
    "reflection/EnumTypeInfo.cpp",
    "reflection/EnumTypeInfo.h",
    "reflection/FieldInfo.h",
    "reflection/FunctionInfo.h",
    "reflection/InterfaceInfo.h",
    "reflection/NativeConstructorInfo.h",
    "reflection/NativePropertyInfo.h",
    "reflection/NativeTypeInfo.h",
    "reflection/PropertyInfo.h",
    "reflection/Reflection.cpp",
    "reflection/Reflection.h",
    "reflection/ReflectionBuilder.h",
    "reflection/TypeDB.cpp",
    "reflection/TypeDB.h",
    "reflection/TypeInfo.h",
    "stde/TMP.h",
    "stde/TypeTraits.h",
    "util/InterfaceUtils.h",
    "util/StringUtils.h",
  ]
  defines = [ "SGE_BASE_BUILD" ]
}
